samples/_failures_safe/1761288759_c782ba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e86077d.c: In function ‘main’:
./samples/SAFE/__tmp_1e86077d.c:149:9: error: expected expression at end of input
  149 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_1e86077d.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1e86077d.c:149:9: error: expected declaration or statement at end of input
